--- a/frontend/src/styles/SettingsModal.scss
+++ b/frontend/src/styles/SettingsModal.scss
@@ -220,7 +220,7 @@
 
           .layout-toggle {
             display: flex;
-            justify-content: center;
+            justify-content: flex-end;
             gap: 5px;
             width: 100%;
 
