--- a/frontend/src/styles/SearchBar.scss
+++ b/frontend/src/styles/SearchBar.scss
@@ -220,8 +220,13 @@
     color: #ff5ca8;
     margin-right: 20px;
 
-    &:hover {
+    &:hover:not(:disabled) {
       transform: scale(1.05);
+    }
+
+    &:disabled {
+      opacity: 0.5;
+      cursor: not-allowed;
     }
   }
 
@@ -260,13 +265,18 @@
     color: #ff5ca8;
     margin-right: 10px;
 
-    &:hover {
+    &:hover:not(:disabled) {
       transform: scale(1.05);
     }
 
     &.active {
       background: #ff5ca8;
       color: #fff;
+    }
+
+    &:disabled {
+      opacity: 0.5;
+      cursor: not-allowed;
     }
   }
 }
