--- a/frontend/src/styles/PageButtons.scss
+++ b/frontend/src/styles/PageButtons.scss
@@ -46,6 +46,7 @@
     background-color: #1b1b24;
     height: 60px;
     padding: 8px 12px;
+    width: 100px;
   }
 
   @media (max-width: 600px) {
