--- a/frontend/src/styles/SettingsModal.scss
+++ b/frontend/src/styles/SettingsModal.scss
@@ -15,6 +15,7 @@
   border-radius: 12px;
   box-shadow: 0 0 30px rgba(0, 0, 0, 0.8);
   width: 450px;
+  max-width: 90%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -55,6 +56,10 @@
       text-align: center;
       font-size: 2rem;
       font-weight: 700;
+
+      @media (max-width: 768px) {
+        font-size: 1.75rem;
+      }
     }
   }
 
@@ -65,6 +70,7 @@
     overflow-y: scroll;
     scrollbar-width: none;
     border-radius: 6px;
+    width: 100%;
 
     .settings-section {
       display: flex;
@@ -80,6 +86,10 @@
         width: fit-content;
         top: 0;
         left: 0;
+
+        @media (max-width: 768px) {
+          font-size: 1.25rem;
+        }
       }
 
       .settings-section-content {
@@ -134,6 +144,10 @@
           .settings-names {
             font-weight: 500;
             font-size: 1.1rem;
+
+            @media (max-width: 768px) {
+              font-size: 0.75rem;
+            }
           }
 
           .filename-input {
@@ -153,6 +167,10 @@
 
             &::placeholder {
               color: #666;
+            }
+
+            @media (max-width: 768px) {
+              font-size: 0.75rem;
             }
           }
 
@@ -311,5 +329,9 @@
         }
       }
     }
+  }
+
+  @media (max-width: 768px) {
+    font-size: 0.75rem;
   }
 }
