--- a/frontend/src/styles/App.scss
+++ b/frontend/src/styles/App.scss
@@ -44,6 +44,11 @@ button {
     }
   }
 
+  &.mobile-page-buttons-padding {
+    padding-top: 110px;
+    padding-bottom: 65px;
+  }
+
   &.popular-fixed {
     padding-top: 170px;
 
@@ -51,7 +56,7 @@ button {
       padding-top: 125px;
       padding-left: 10px;
       padding-right: 10px;
-      padding-bottom: 80px;
+      padding-bottom: 65px;
     }
   }
 
@@ -248,6 +253,7 @@ button {
   &.accurate-grid {
     .post-wrapper {
       overflow: hidden;
+      height: fit-content;
 
       .post-item {
         width: 100%;
@@ -266,6 +272,112 @@ button {
 
     @media (max-width: 768px) {
       margin-bottom: 10px;
+    }
+
+    &.mobile-no-buttons {
+      .maximize-btn,
+      .tags-btn,
+      .info-btn,
+      .fav-post-btn {
+        display: none !important;
+      }
+    }
+
+    &.buttons-top {
+      .maximize-btn {
+        top: 10px;
+        right: 10px;
+      }
+
+      .tags-btn {
+        top: 10px;
+        right: 60px;
+      }
+
+      .info-btn {
+        top: 10px;
+        right: 110px;
+      }
+
+      .fav-post-btn {
+        top: 10px;
+        right: 160px;
+      }
+
+      &.maximized {
+        .maximize-btn {
+          top: 20px;
+          right: 20px;
+        }
+
+        .tags-btn {
+          top: 20px;
+          right: 80px;
+        }
+
+        .info-btn {
+          top: 20px;
+          right: 140px;
+        }
+
+        .fav-post-btn {
+          top: 20px;
+          right: 200px;
+        }
+      }
+    }
+
+    &.buttons-bottom {
+      .maximize-btn {
+        top: auto;
+        bottom: 10px;
+        right: 10px;
+      }
+
+      .tags-btn {
+        top: auto;
+        bottom: 10px;
+        right: 60px;
+      }
+
+      .info-btn {
+        top: auto;
+        bottom: 10px;
+        right: 110px;
+      }
+
+      .fav-post-btn {
+        top: auto;
+        bottom: 10px;
+        right: 160px;
+      }
+
+      // Większe dla maximized
+      &.maximized {
+        .maximize-btn {
+          top: auto;
+          bottom: 20px;
+          right: 20px;
+        }
+
+        .tags-btn {
+          top: auto;
+          bottom: 20px;
+          right: 80px;
+        }
+
+        .info-btn {
+          top: auto;
+          bottom: 20px;
+          right: 140px;
+        }
+
+        .fav-post-btn {
+          top: auto;
+          bottom: 20px;
+          right: 200px;
+        }
+      }
     }
 
     .maximize-btn {
@@ -324,7 +436,7 @@ button {
       display: flex;
       align-items: center;
       justify-content: center;
-      z-index: 999;
+      z-index: 1500;
       background: rgba(0, 0, 0, 0.9);
       padding: 20px;
 
@@ -341,6 +453,7 @@ button {
         @media (max-width: 768px) {
           width: 100%;
           height: auto;
+          max-height: 80vh;
         }
       }
 
